added bootcards on the home page

--- a/src/home/partial-tech.html
+++ b/src/home/partial-tech.html
@@ -4,4 +4,5 @@
     <div class="text-danger">AngularJS 1.6</div>
     <div class="text-danger">ui-router</div>
     <div class="text-danger">Angular Components</div>
+    <div class="text-danger">Bootcards</div>
 </div>
